js262/test/language/comments/S7.4_A3.js


/*---
info: Multi line comments cannot nest
es5id: 7.4_A3
description: Try use nested comments
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


= 1;
*/
